{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 35,
  "lineage": "5f1b7c86-cb5f-3e63-19b2-05bc063c941e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "demo-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "Jenkins-master",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0933f1385008d33c4",
            "arn": "arn:aws:ec2:ap-southeast-1:770424767729:instance/i-0933cc818b3de4f3e",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0933cc818b3de4f3e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "congthanh-devops",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0e6bf1681567c9bf1"
              }
            ],
            "primary_network_interface_id": "eni-0e6bf1681567c9bf1",
            "private_dns": "ip-10-1-1-150.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.150",
            "public_ip": "13.229.76.214",
            "region": "ap-southeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-021719a7f7e757eea",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0232cc0ea95ab3b39",
            "tags": {
              "Name": "Jenkins-master"
            },
            "tags_all": {
              "Name": "Jenkins-master"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0863862f2a0093440"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "770424767729",
            "id": "i-0933cc818b3de4f3e",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_security_group.Security_group",
            "aws_subnet.congthanh-public-subnet-01",
            "aws_vpc.congthanh_vpc"
          ]
        },
        {
          "index_key": "Jenkins-slave",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0933f1385008d33c4",
            "arn": "arn:aws:ec2:ap-southeast-1:770424767729:instance/i-0fe0dd249b6abc153",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fe0dd249b6abc153",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "congthanh-devops",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0064dbc88fd627661"
              }
            ],
            "primary_network_interface_id": "eni-0064dbc88fd627661",
            "private_dns": "ip-10-1-1-240.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.240",
            "public_ip": "52.77.234.147",
            "region": "ap-southeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-040b02e4a20456b7f",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0232cc0ea95ab3b39",
            "tags": {
              "Name": "Jenkins-slave"
            },
            "tags_all": {
              "Name": "Jenkins-slave"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0863862f2a0093440"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "770424767729",
            "id": "i-0fe0dd249b6abc153",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_security_group.Security_group",
            "aws_subnet.congthanh-public-subnet-01",
            "aws_vpc.congthanh_vpc"
          ]
        },
        {
          "index_key": "ansible",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0933f1385008d33c4",
            "arn": "arn:aws:ec2:ap-southeast-1:770424767729:instance/i-08634f5c72ab775b8",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08634f5c72ab775b8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "congthanh-devops",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-018e2fc33afa84b3a"
              }
            ],
            "primary_network_interface_id": "eni-018e2fc33afa84b3a",
            "private_dns": "ip-10-1-1-112.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.112",
            "public_ip": "47.128.72.158",
            "region": "ap-southeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0db160b7291dd7e7e",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0232cc0ea95ab3b39",
            "tags": {
              "Name": "ansible"
            },
            "tags_all": {
              "Name": "ansible"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0863862f2a0093440"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "770424767729",
            "id": "i-08634f5c72ab775b8",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_security_group.Security_group",
            "aws_subnet.congthanh-public-subnet-01",
            "aws_vpc.congthanh_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "congthanh_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:770424767729:internet-gateway/igw-0db83fca50945564a",
            "id": "igw-0db83fca50945564a",
            "owner_id": "770424767729",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "congthanh_igw"
            },
            "tags_all": {
              "Name": "congthanh_igw"
            },
            "vpc_id": "vpc-039f28f558a5f0ee7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.congthanh_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "congthanh-public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:770424767729:route-table/rtb-0cf631e0a06f9c71c",
            "id": "rtb-0cf631e0a06f9c71c",
            "owner_id": "770424767729",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0db83fca50945564a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-039f28f558a5f0ee7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "770424767729",
            "id": "rtb-0cf631e0a06f9c71c",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_internet_gateway.congthanh_igw",
            "aws_vpc.congthanh_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "congthanh-rta-public-subnet-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-052d4032236114b4a",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0cf631e0a06f9c71c",
            "subnet_id": "subnet-0232cc0ea95ab3b39"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.congthanh_igw",
            "aws_route_table.congthanh-public-rt",
            "aws_subnet.congthanh-public-subnet-01",
            "aws_vpc.congthanh_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "congthanh-rta-public-subnet-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0767cc093949da104",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0cf631e0a06f9c71c",
            "subnet_id": "subnet-0c73844cba9c08b49"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.congthanh_igw",
            "aws_route_table.congthanh-public-rt",
            "aws_subnet.congthanh-public-subnet-02",
            "aws_vpc.congthanh_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:770424767729:security-group/sg-0863862f2a0093440",
            "description": "Allow SSH, HTTP, and HTTPS traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0863862f2a0093440",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Shh access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Security_group",
            "name_prefix": "",
            "owner_id": "770424767729",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Security-group"
            },
            "tags_all": {
              "Name": "Security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-039f28f558a5f0ee7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "770424767729",
            "id": "sg-0863862f2a0093440",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.congthanh_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "congthanh-public-subnet-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:770424767729:subnet/subnet-0232cc0ea95ab3b39",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0232cc0ea95ab3b39",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "770424767729",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "congthanh-public-subnet-01"
            },
            "tags_all": {
              "Name": "congthanh-public-subnet-01"
            },
            "vpc_id": "vpc-039f28f558a5f0ee7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "770424767729",
            "id": "subnet-0232cc0ea95ab3b39",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.congthanh_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "congthanh-public-subnet-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:770424767729:subnet/subnet-0c73844cba9c08b49",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c73844cba9c08b49",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "770424767729",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "congthanh-public-subnet-02"
            },
            "tags_all": {
              "Name": "congthanh-public-subnet-02"
            },
            "vpc_id": "vpc-039f28f558a5f0ee7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "770424767729",
            "id": "subnet-0c73844cba9c08b49",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.congthanh_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "congthanh_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:770424767729:vpc/vpc-039f28f558a5f0ee7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0bf79e9d7d7a5f3fb",
            "default_route_table_id": "rtb-094f4116144d9d743",
            "default_security_group_id": "sg-04040d4de656f8ab5",
            "dhcp_options_id": "dopt-0535f63fa1b8d41f8",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-039f28f558a5f0ee7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-094f4116144d9d743",
            "owner_id": "770424767729",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "congthanh_vpc"
            },
            "tags_all": {
              "Name": "congthanh_vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}